...
                            .accessibility(identifier: "countryflag")
                    }
                }
            } label: {
                Text(selectedFlag)
                    .font(.headline)
                    .accessibility(identifier: "countrycodeandflag")
                
            }
            .foregroundColor(.black)
            TextField("Phone Number", text: $phoneNumber)
                .keyboardType(.phonePad)
                .accessibility(identifier: "countrytextfield")
               
        }
        .frame(maxWidth: .infinity)
        .padding(20)
        .validateBorderStyle(text: $phoneNumber, validation: validation)
    }
...
