...
        GeometryReader { geo in
            ZStack(alignment: .top) {
                topBackgroundDesign(
                    color: PrimaryTheme.getColor(.cellulantLightGray)
                ).frame(height: geo.size.height*0.5)
                tinggColoredLogo
                    .accessibility(identifier: "tingggreenlogo")
                IntroTabView(active: $active)
                    .environmentObject(navigation)
            }
            .background(.white)
            .onAppear {
                setPageIndicatorAppearance()
...
        TinggButton(backgroundColor: PrimaryTheme.getColor(.primaryColor)) {
            navigation.navigateTo(
                screen: OnboardingScreen.accountRegistration
            )
        }
        .padding()
        .accessibility(identifier: "getstarted")
    }
}
public var tinggColoredLogo: some View {
    PrimaryTheme.getImage(image: .tinggIcon)
        .resizable()
        .frame(width: 60, height: 60)
...
